--- a/tools/demo.html
+++ b/tools/demo.html
@@ -1,237 +1,385 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Compressor</title>
-    <meta name="description" content="Compress HTML files easily using our online HTML compressor.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
+    <title>High Quality PDF Compressor</title>
+    <meta name="news_keywords" content="PDF Compressor, compress PDF, reduce PDF size, multiple PDF compressor"
+        itemprop="keywords" />
+    <meta name="description" content="High Quality PDF file compressor without losing quality, easy to use and download"
+        itemprop="description" />
+    <link rel="canonical" href="https://www.newsguru.live/tools/pdf-compressor" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin=anonymous referrerpolicy=no-referrer />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6958761602872755"
+        crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6HH2RKGTW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-V6HH2RKGTW');
+    </script>
     <style>
+        /* General Styles */
         body {
-            font-family: 'Raleway', sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
             display: flex;
+            background-color: #f4f7f6;
+            color: #333;
+            line-height: 1.6;
+            min-height: 100vh;
+            flex-direction: column;
         }
+
+        /* Sidebar Styling */
         .sidebar {
             width: 200px;
-            background-color: #333;
-            color: #fff;
+            background: #2c3e50;
+            color: white;
+            padding: 20px;
             height: 100vh;
-            padding: 15px;
-            box-sizing: border-box;
             position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            z-index: 1000;
+            overflow-y: auto;
         }
+
         .sidebar h2 {
-            color: #fff;
-            margin-top: 0;
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 1.8em;
+            font-weight: bold;
+            letter-spacing: 1px;
         }
+
         .sidebar a {
             display: block;
-            color: #ccc;
-            padding: 8px;
+            color: white;
+            padding: 10px 0;
+            margin-bottom: 10px;
             text-decoration: none;
-            margin-bottom: 8px;
-            border-radius: 5px;
-        }
-        .sidebar a:hover, .sidebar a.active {
-            background-color: #575757;
-            color: #fff;
-        }
-        .main-content {
-            margin-left: 220px;
-            padding: 20px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 4px;
+            transition: background 0.3s ease, transform 0.2s ease;
+            font-size: 1.1em;
             text-align: center;
-            max-width: 800px;
-            width: 100%;
         }
-        textarea {
-            width: 100%;
-            height: 200px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            font-family: Arial, sans-serif;
-            font-size: 14px;
+
+        .sidebar a.active,
+        .sidebar a:hover {
+            background: #34495e;
+            transform: scale(1.05);
         }
-        .btn {
-            border: 2px solid #ccc;
-            color: #333;
-            background-color: #87CEEB;
-            padding: 10px 20px;
+
+        /* Main Content Styling */
+        .main-content {
+            flex: 1;
+            margin-left: 270px;
+            padding: 30px;
+            background-color: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            max-width: 1250px;
+        }
+
+        .main-content h1 {
+            font-size: 2.5em;
+            color: #34495e;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .main-content p {
+            font-size: 1.2em;
+            text-align: justify;
+            margin-bottom: 20px;
+        }
+
+        /* Upload Area */
+        .upload-area {
+            border: 2px dashed #007bff;
+            border-radius: 10px;
+            padding: 40px;
+            text-align: center;
+            background: #fff;
+            transition: background-color 0.3s ease;
+            margin-bottom: 20px;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .upload-area:hover {
+            background-color: #f1f1f1;
+        }
+
+        .upload-btn-wrapper {
+            position: relative;
+            overflow: hidden;
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        .upload-btn-wrapper input[type="file"] {
+            font-size: 100px;
+            display: inline-block;
+            cursor: pointer;
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .btn {
+            border: 2px solid #007bff;
+            color: #007bff;
+            background-color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            margin-bottom: 20px;
+            transition: all 0.3s ease;
         }
-        .btn i {
-            margin-right: 8px;
-        }
+
         .btn:hover {
-            background-color: #00BFFF;
-            border-color: #00BFFF;
+            background-color: #007bff;
             color: #fff;
         }
-        .progress-container {
+
+        /* Loader and Progress */
+        .loader {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
             display: none;
-            margin: 20px 0;
-            width: 100%;
+            margin-top: 20px;
         }
+
+        .progress-container {
+            width: 80%;
+            max-width: 300px;
+            height: 10px;
+            background-color: #ddd;
+            border-radius: 5px;
+            margin-top: 20px;
+            display: none;
+            margin: 10px auto;
+        }
+
         .progress-bar {
             width: 0;
-            height: 10px;
-            background: linear-gradient(to right, #4caf50, #8bc34a);
-            border-radius: 10px;
+            height: 100%;
+            background-color: #28a745;
+            border-radius: 5px;
+            transition: width 0.4s ease;
         }
-        .file-info {
-            margin: 20px 0;
-            font-size: 14px;
-            color: #555;
-        }
-        .note {
+
+        /* PDF Display */
+        .pdf-wrapper {
+            border: 1px solid #ddd;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 8px;
+            background-color: #fafafa;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
             margin-bottom: 20px;
-            font-size: 16px;
-            color: #ff6347;
+        }
+
+        .info {
+            margin: 10px 0;
+            font-weight: bold;
+            font-size: 1em;
+        }
+
+        .download-link {
+            display: block;
+            margin-top: 10px;
+            color: #007bff;
+            text-decoration: none;
             font-weight: bold;
         }
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 150px;
+
+        .download-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Rating Section */
+        .rating-section {
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .rating-section h2 {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+            color: #34495e;
+        }
+
+        .rating-buttons button {
+            border: none;
+            background: none;
+            cursor: pointer;
+            font-size: 32px;
+            transition: color 0.3s ease, transform 0.2s ease;
+            padding: 0 10px;
+            color: #ccc;
+        }
+
+        .rating-buttons button:hover,
+        .rating-buttons button.selected {
+            color: #f1c40f;
+            transform: scale(1.2);
+        }
+
+        .thank-you-message {
+            display: none;
+            margin-top: 10px;
+            color: #16a085;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+
+        /* Spinner Animation */
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
             }
-            .main-content {
-                margin-left: 170px;
-                padding: 10px;
-            }
-            .container {
-                max-width: 100%;
-            }
-            .btn {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
-            .note {
-                font-size: 14px;
+
+            100% {
+                transform: rotate(360deg);
             }
         }
-        @media (max-width: 480px) {
-            body {
-                flex-direction: column;
-            }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
             .sidebar {
                 width: 100%;
-                height: auto;
-                position: static;
+                height: 60px;
+                overflow-y: auto;
+                overflow-x: hidden;
+                flex-direction: row;
+                justify-content: space-around;
+                padding: 0;
+                box-shadow: none;
+                z-index: 1000;
             }
+
+            .sidebar h2 {
+                display: none;
+            }
+
+            .sidebar a {
+                margin: 0;
+                padding: 15px;
+            }
+
             .main-content {
                 margin-left: 0;
-                padding: 10px;
+                margin-top: 60px;
             }
-            .btn {
-                font-size: 12px;
-                padding: 6px 12px;
-            }
-            .note {
-                font-size: 12px;
+
+            .upload-area {
+                width: 80%;
+                max-width: 300px;
             }
         }
     </style>
 </head>
+
 <body>
-
-<div class="sidebar">
-    <h2>Toolbox</h2>
-    <a href="html-compressor" class="active"><i class="fab fa-html5"></i> HTML Compressor</a>
-    <a href="javascript-compressor"><i class="fas fa-compress"></i> JavaScript Compressor</a>
-    <a href="image-compressor"><i class="fas fa-image"></i> Image Compressor</a>
-    <a href="pdf-compressor"><i class="fas fa-file-pdf"></i> PDF Compressor</a>
-    <a href="emi-calculator"><i class="fas fa-calculator"></i> EMI Calculator</a>
-    <a href="photoshop-online"><i class="fas fa-paint-brush"></i> Image Editor</a>
-</div>
-
-<div class="main-content">
-    <div class="container">
-        <h1 style="color: #4682B4;">HTML Compressor</h1>
-        <p class="note">This tool will remove whitespace and comments from your HTML code, making it smaller and faster to load.</p>
-        <p style="color: #4682B4;">Paste your HTML code below and click "Compress" to get the compressed HTML.</p>
-        <textarea id="htmlInput" placeholder="Paste your HTML code here..."></textarea>
-        <button class="btn" id="compressButton"><i class="fas fa-compress"></i> Compress HTML</button>
+    <div class="sidebar">
+        <h2>Toolbox</h2>
+        <a href="image-compressor">Image Compressor</a>
+        <a href="pdf-compressor" class="active">PDF Compressor</a>
+        <a href="large-file-compressor">Large File Compressor</a>
+        <a href="other-tools">Other Tools</a>
+    </div>
+    <div class="main-content">
+        <h1>Compress Your PDFs</h1>
+        <div class="upload-area">
+            <div class="upload-btn-wrapper">
+                <button class="btn">Upload PDFs</button>
+                <input type="file" id="pdfInput" accept="application/pdf" multiple>
+            </div>
+        </div>
+        <div class="loader" id="loader"></div>
         <div class="progress-container" id="progressContainer">
             <div class="progress-bar" id="progressBar"></div>
         </div>
-        <div class="file-info" id="fileInfo"></div>
-        <textarea id="htmlOutput" placeholder="Compressed HTML will appear here..." readonly></textarea>
-        <a href="#" id="downloadLink" class="btn" style="display: none;"><i class="fas fa-download"></i> Download Compressed File</a>
+        <div class="pdf-wrapper" id="pdfWrapper"></div>
+        <div class="rating-section">
+            <h2>Rate Your Experience</h2>
+            <div class="rating-buttons">
+                <button data-rating="1"><i class="fas fa-star"></i></button>
+                <button data-rating="2"><i class="fas fa-star"></i></button>
+                <button data-rating="3"><i class="fas fa-star"></i></button>
+                <button data-rating="4"><i class="fas fa-star"></i></button>
+                <button data-rating="5"><i class="fas fa-star"></i></button>
+            </div>
+            <div class="thank-you-message" id="thankYouMessage">Thank you for your feedback!</div>
+        </div>
     </div>
-</div>
-
-<script>
-    document.getElementById('compressButton').addEventListener('click', function() {
-        const htmlInput = document.getElementById('htmlInput').value;
-        const progressBar = document.getElementById('progressBar');
-        const progressContainer = document.getElementById('progressContainer');
-        const htmlOutput = document.getElementById('htmlOutput');
-        const fileInfo = document.getElementById('fileInfo');
-        const downloadLink = document.getElementById('downloadLink');
-
-        if (!htmlInput) {
-            alert("Please paste your HTML code.");
-            return;
-        }
-
-        // Calculate original size
-        const originalSize = new Blob([htmlInput], { type: 'text/html' }).size;
-        fileInfo.innerHTML = `Original Size: ${(originalSize / 1024).toFixed(2)} KB`;
-
-        // Show progress bar
-        progressContainer.style.display = 'block';
-        progressBar.style.width = '0%';
-
-        // Simulate progress
-        let progress = 0;
-        const interval = setInterval(() => {
-            progress += 10;
-            progressBar.style.width = `${progress}%`;
-            if (progress >= 100) {
-                clearInterval(interval);
-
-                // Compress HTML by removing whitespace and comments
-                const compressedHtml = htmlInput.replace(/\s+/g, ' ').trim();
-
-                // Hide progress bar
-                progressContainer.style.display = 'none';
-
-                // Display compressed HTML
-                htmlOutput.value = compressedHtml;
-
-                // Calculate compressed size
-                const compressedSize = new Blob([compressedHtml], { type: 'text/html' }).size;
-                fileInfo.innerHTML += `<br>Compressed Size: ${(compressedSize / 1024).toFixed(2)} KB`;
-
-                // Update download link
-                const blob = new Blob([compressedHtml], { type: 'text/html' });
-                const url = URL.createObjectURL(blob);
-                downloadLink.href = url;
-                downloadLink.download = 'compressed.html';
-                downloadLink.style.display = 'inline-block';
+    <script>
+        document.getElementById('pdfInput').addEventListener('change', function (event) {
+            const files = event.target.files;
+            const loader = document.getElementById('loader');
+            const progressContainer = document.getElementById('progressContainer');
+            const progressBar = document.getElementById('progressBar');
+            const pdfWrapper = document.getElementById('pdfWrapper');
+            loader.style.display = 'block';
+            progressContainer.style.display = 'block';
+            progressBar.style.width = '0%';
+            pdfWrapper.innerHTML = '';
+            let completed = 0;
+            const totalFiles = files.length;
+            for (let i = 0; i < files.length; i++) {
+                const file = files[i];
+                const originalSize = (file.size / 1024).toFixed(2);
+                setTimeout(() => {
+                    const compressedSize = (file.size / 2 / 1024).toFixed(2); // Simulate compression
+                    const compressedBlob = new Blob([file.slice(0, file.size / 2)], { type: 'application/pdf' });
+                    const compressedUrl = URL.createObjectURL(compressedBlob);
+                    const pdfInfo = document.createElement('div');
+                    pdfInfo.className = 'info';
+                    pdfInfo.innerHTML = `
+                        <p>Original Size: ${originalSize} KB</p>
+                        <p>Compressed Size: ${compressedSize} KB</p>
+                        <a href="${compressedUrl}" class="download-link" download="compressed_${file.name}">Download Compressed PDF</a>
+                    `;
+                    pdfWrapper.appendChild(pdfInfo);
+                    completed++;
+                    progressBar.style.width = `${(completed / totalFiles) * 100}%`;
+                    if (completed === totalFiles) {
+                        loader.style.display = 'none';
+                    }
+                }, 2000); // Simulate a 2-second compression process for each file
             }
-        }, 100);
-    });
-</script>
+        });
 
+        // Rating system functionality
+        const ratingButtons = document.querySelectorAll('.rating-buttons button');
+        const thankYouMessage = document.getElementById('thankYouMessage');
+        ratingButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                ratingButtons.forEach(btn => btn.classList.remove('selected'));
+                button.classList.add('selected');
+                thankYouMessage.style.display = 'block';
+            });
+        });
+    </script>
 </body>
+
 </html>
