--- a/tools/demo.html
+++ b/tools/demo.html
@@ -296,89 +296,95 @@
                 max-width: 300px;
             }
         }
+
+        .intro-text {
+            font-family: 'Lobster', cursive;
+            font-size: 1.5em;
+            color: #2c3e50;
+            margin-bottom: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
     <div class="sidebar">
-        <h2>Toolbox</h2>
-        <a href="image-compressor">Image Compressor</a>
-        <a href="pdf-compressor" class="active">PDF Compressor</a>
-        <a href="large-file-compressor">Large File Compressor</a>
-        <a href="other-tools">Other Tools</a>
+        <h2>PDF Tools</h2>
+        <a href="#" class="active">PDF Compressor</a>
+        <a href="#">PDF Merger</a>
+        <a href="#">PDF Splitter</a>
+        <a href="#">PDF Converter</a>
     </div>
     <div class="main-content">
-        <h1>Compress Your PDFs</h1>
-        <div class="upload-area">
+        <h1>Compress Your PDF Files</h1>
+        <p class="intro-text">You can compress PDF files to reduce their size without losing quality.</p>
+        <div class="upload-area" id="uploadfile">
             <div class="upload-btn-wrapper">
-                <button class="btn">Upload PDFs</button>
-                <input type="file" id="pdfInput" accept="application/pdf" multiple>
+                <button class="btn">Choose PDF File</button>
+                <input type="file" id="fileInput" accept="application/pdf" />
             </div>
         </div>
         <div class="loader" id="loader"></div>
         <div class="progress-container" id="progressContainer">
             <div class="progress-bar" id="progressBar"></div>
         </div>
-        <div class="pdf-wrapper" id="pdfWrapper"></div>
-        <div class="rating-section">
-            <h2>Rate Your Experience</h2>
-            <div class="rating-buttons">
-                <button data-rating="1"><i class="fas fa-star"></i></button>
-                <button data-rating="2"><i class="fas fa-star"></i></button>
-                <button data-rating="3"><i class="fas fa-star"></i></button>
-                <button data-rating="4"><i class="fas fa-star"></i></button>
-                <button data-rating="5"><i class="fas fa-star"></i></button>
-            </div>
-            <div class="thank-you-message" id="thankYouMessage">Thank you for your feedback!</div>
+        <div class="pdf-wrapper" id="pdfWrapper">
+            <div class="info" id="pdfInfo"></div>
+            <a class="download-link" id="downloadLink" href="#" download>Download Compressed PDF</a>
         </div>
     </div>
     <script>
-        document.getElementById('pdfInput').addEventListener('change', function (event) {
-            const files = event.target.files;
-            const loader = document.getElementById('loader');
-            const progressContainer = document.getElementById('progressContainer');
-            const progressBar = document.getElementById('progressBar');
-            const pdfWrapper = document.getElementById('pdfWrapper');
-            loader.style.display = 'block';
-            progressContainer.style.display = 'block';
-            progressBar.style.width = '0%';
-            pdfWrapper.innerHTML = '';
-            let completed = 0;
-            const totalFiles = files.length;
-            for (let i = 0; i < files.length; i++) {
-                const file = files[i];
-                const originalSize = (file.size / 1024).toFixed(2);
-                setTimeout(() => {
-                    const compressedSize = (file.size / 2 / 1024).toFixed(2); // Simulate compression
-                    const compressedBlob = new Blob([file.slice(0, file.size / 2)], { type: 'application/pdf' });
-                    const compressedUrl = URL.createObjectURL(compressedBlob);
-                    const pdfInfo = document.createElement('div');
-                    pdfInfo.className = 'info';
-                    pdfInfo.innerHTML = `
-                        <p>Original Size: ${originalSize} KB</p>
-                        <p>Compressed Size: ${compressedSize} KB</p>
-                        <a href="${compressedUrl}" class="download-link" download="compressed_${file.name}">Download Compressed PDF</a>
-                    `;
-                    pdfWrapper.appendChild(pdfInfo);
-                    completed++;
-                    progressBar.style.width = `${(completed / totalFiles) * 100}%`;
-                    if (completed === totalFiles) {
-                        loader.style.display = 'none';
-                    }
-                }, 2000); // Simulate a 2-second compression process for each file
+        document.getElementById('fileInput').addEventListener('change', function (e) {
+            const file = e.target.files[0];
+            if (file) {
+                compressPDF(file);
             }
         });
 
-        // Rating system functionality
-        const ratingButtons = document.querySelectorAll('.rating-buttons button');
-        const thankYouMessage = document.getElementById('thankYouMessage');
-        ratingButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                ratingButtons.forEach(btn => btn.classList.remove('selected'));
-                button.classList.add('selected');
-                thankYouMessage.style.display = 'block';
-            });
-        });
+        function compressPDF(file) {
+            const formData = new FormData();
+            formData.append('pdf', file);
+
+            document.getElementById('loader').style.display = 'block';
+            document.getElementById('progressContainer').style.display = 'block';
+            document.getElementById('progressBar').style.width = '0%';
+
+            const xhr = new XMLHttpRequest();
+            xhr.open('POST', '/compress-pdf', true);
+
+            xhr.upload.onprogress = function (e) {
+                if (e.lengthComputable) {
+                    const percentComplete = (e.loaded / e.total) * 100;
+                    document.getElementById('progressBar').style.width = percentComplete + '%';
+                }
+            };
+
+            xhr.onload = function () {
+                if (xhr.status === 200) {
+                    const response = JSON.parse(xhr.responseText);
+                    if (response.success) {
+                        const compressedPDF = response.fileUrl;
+                        document.getElementById('pdfWrapper').style.display = 'block';
+                        document.getElementById('pdfInfo').textContent = `Original Size: ${response.originalSize} MB, Compressed Size: ${response.compressedSize} MB`;
+                        document.getElementById('downloadLink').href = compressedPDF;
+                    } else {
+                        alert('Failed to compress the PDF. Please try again.');
+                    }
+                } else {
+                    alert('Error occurred during the file upload. Please try again.');
+                }
+                document.getElementById('loader').style.display = 'none';
+                document.getElementById('progressContainer').style.display = 'none';
+            };
+
+            xhr.onerror = function () {
+                alert('An error occurred while uploading the file. Please try again.');
+                document.getElementById('loader').style.display = 'none';
+                document.getElementById('progressContainer').style.display = 'none';
+            };
+
+            xhr.send(formData);
+        }
     </script>
 </body>
 
